completed draft team table

--- a/about-us.html
+++ b/about-us.html
@@ -1,12 +1,62 @@
 <html>
+    <style>
+        html * {font-family: Arial, Helvetica, sans-serif;}
+        table {border-collapse: separate; border-spacing: 5px ; width: 90%;}
+        td {text-align: center;}
+
+    </style>
+    <title>CS 410 Gold: About Us</title>
+
     <body>
-        <ul>
-            <li>Ashley Carter</li>
-            <li>Jacinda Rosario</li>
-            <li>Kayla Pineda</li>
-            <li>Kofi Amoah</li>
-            <li>Pablo Castaneda</li>
-            <li>Xavier Jordan</li>
-        </ul>
+        <h1>Meet the Team</h1>
+
+        <p>Hello! We are Group Gold, the team behind Schedule Puzzle!</p>
+
+        <table>
+            <tr>
+                <td>
+                    <img src=""
+                    alt="Ashley Carter" style="width:250px;height:250px;"><br><br>
+                    <b>Ashley Carter</b><br>
+                    Task description
+                </td>>
+
+                <td><img src=""
+                    alt="Jacinda Rosario" style="width:250px;height:250px;"><br><br>
+                    <b>Jacinda Rosario</b><br>
+                    Task description
+                </td>
+
+                <td><img src=""
+                    alt="Kayla Pineda" style="width:250px;height:250px;"><br><br>
+                    <b>Kayla Pineda</b><br>
+                    Task description</td>
+            </tr>
+            <tr>
+                <td><img src=""
+                    alt="Kofi Amoah" style="width:250px;height:250px;"><br><br>
+                    <b>Kofi Amoah</b><br>
+                    Task description
+                </td>
+
+                <td><img src=""
+                    alt="Pablo Castaneda" style="width:250px;height:250px;"><br><br>
+                    <b>Pablo Castaneda</b><br>
+                    Task description
+                </td>
+
+                <td><img src=""
+                    alt="Xavier Jordan" style="width:250px;height:250px;"><br><br>
+                    <b>Xavier Jordan</b><br>
+                    Task description
+                </td>
+            </tr>
+        </table>
+
+        <footer>
+            <br><br>
+            <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/">Return to homepage</a>
+        </footer>
+
     </body>
 </html>
