added bio picture

--- a/about-us.html
+++ b/about-us.html
@@ -27,7 +27,7 @@
                     Task description
                 </td>
 
-                <td><img src=""
+                <td><img src="./Pictures/kayla-pineda-profile.jpg"
                     alt="Kayla Pineda" style="width:250px;height:250px;"><br><br>
                     <b>Kayla Pineda</b><br>
                     Task description</td>
