fancy bio added

--- a/about-us.html
+++ b/about-us.html
@@ -30,7 +30,10 @@
                 <td><img src="./Pictures/kayla-pineda-profile.jpg"
                     alt="Kayla Pineda" style="width:250px;height:250px;"><br><br>
                     <b>Kayla Pineda</b><br>
-                    Task description</td>
+                    Kayla Pineda is a junior at Old Dominion University majoring in Computer Science.
+                    She is currently an Undergraduate Research Assistant with the Computer Science Department at ODU.
+                    One of her projects is Gaze-based Drone Navigation, and the other is text analysis with TikTok.
+                    Her hobbies are 3D puzzles, writing, and 3D art.</td>
             </tr>
             <tr>
                 <td><img src=""
