--- a/about-us.html
+++ b/about-us.html
@@ -15,7 +15,7 @@
         <table>
             <tr>
                 <td>
-                    <img src=""
+                    <img src="./Pictures/ashleypic.JPG"
                     alt="Ashley Carter" style="width:250px;height:250px;"><br><br>
                     <b>Ashley Carter</b><br>
                     Task description
