added more pictures

--- a/about-us.html
+++ b/about-us.html
@@ -21,7 +21,7 @@
                     Task description
                 </td>>
 
-                <td><img src=""
+                <td><img src="./Pictures/jacindapicture.jpg"
                     alt="Jacinda Rosario" style="width:250px;height:250px;"><br><br>
                     <b>Jacinda Rosario</b><br>
                     Task description
@@ -36,7 +36,7 @@
                     Her hobbies are 3D puzzles, writing, and 3D art.</td>
             </tr>
             <tr>
-                <td><img src=""
+                <td><img src="./Pictures/Kofi-pic.JPG"
                     alt="Kofi Amoah" style="width:250px;height:250px;"><br><br>
                     <b>Kofi Amoah</b><br>
                     Task description
@@ -48,7 +48,7 @@
                     Task description
                 </td>
 
-                <td><img src=""
+                <td><img src="./Pictures/Xavier.jpg"
                     alt="Xavier Jordan" style="width:250px;height:250px;"><br><br>
                     <b>Xavier Jordan</b><br>
                     Task description
