--- a/about-us.html
+++ b/about-us.html
@@ -24,7 +24,9 @@
                 <td><img src="./Pictures/jacindapicture.jpg"
                     alt="Jacinda Rosario" style="width:250px;height:250px;"><br><br>
                     <b>Jacinda Rosario</b><br>
-                    Task description
+                    Jacinda is an undergraduate student at Old Dominion University majoring in Computer Science.
+                    She has experience working in C++, Java, and Python. In her free time, she enjoys playing
+                    video games or spending time with her pets. 
                 </td>
 
                 <td><img src="./Pictures/kayla-pineda-profile.jpg"
