--- a/about-us.html
+++ b/about-us.html
@@ -3,8 +3,9 @@
         html * {font-family: Arial, Helvetica, sans-serif;}
         table {border-collapse: separate; border-spacing: 5px ; width: 90%;}
         td {text-align: center;}
-
+        img {width:250px; height:250px; object-fit: cover;}
     </style>
+
     <title>CS 410 Gold: About Us</title>
 
     <body>
@@ -15,45 +16,62 @@
         <table>
             <tr>
                 <td>
-                    <img src="./Pictures/ashleypic.JPG"
-                    alt="Ashley Carter" style="width:250px;height:250px;"><br><br>
-                    <b>Ashley Carter</b><br>
-                    Task description
+                    <img src="./Pictures/ashleypic.JPG"alt="Ashley Carter">
+                    <br>
+                    <p>
+                        <b>Ashley Carter</b><br>
+                        Bio
+                    </p>
                 </td>
 
-                <td><img src="./Pictures/jacindapicture.jpg"
-                    alt="Jacinda Rosario" style="width:250px;height:250px;"><br><br>
-                    <b>Jacinda Rosario</b><br>
-                    Jacinda Rosario is an undergraduate student at Old Dominion University majoring in Computer Science.
-                    She has experience working in C++, Java, and Python. In her free time, she enjoys playing
-                    video games or spending time with her pets. 
+                <td><img src="./Pictures/jacindapicture.jpg" alt="Jacinda Rosario">
+                    <br>
+                    <p>
+                        <b>Jacinda Rosario</b><br>
+                        Jacinda Rosario is an undergraduate student at Old Dominion University majoring in Computer Science.
+                        She has experience working in C++, Java, and Python. In her free time, she enjoys playing
+                        video games or spending time with her pets. 
+                    </p>
                 </td>
 
-                <td><img src="./Pictures/kayla-pineda-profile.jpg"
-                    alt="Kayla Pineda" style="width:250px;height:250px;"><br><br>
-                    <b>Kayla Pineda</b><br>
-                    Kayla Pineda is a junior at Old Dominion University majoring in Computer Science.
-                    She is currently an Undergraduate Research Assistant with the Computer Science Department at ODU.
-                    One of her projects is Gaze-based Drone Navigation, and the other is text analysis with TikTok.
-                    Her hobbies are 3D puzzles, writing, and 3D art.</td>
+                <td>
+                    <img src="./Pictures/kayla-pineda-profile.jpg" alt="Kayla Pineda"><br>
+                    <p>
+                        <b>Kayla Pineda</b><br>
+                        Kayla Pineda is a junior at Old Dominion University majoring in Computer Science.
+                        She is currently an Undergraduate Research Assistant with the Computer Science Department at ODU.
+                        One of her projects is Gaze-based Drone Navigation, and the other is text analysis with TikTok.
+                        Her hobbies are 3D puzzles, writing, and 3D art.
+                    </p>
+                </td>
             </tr>
             <tr>
-                <td><img src="./Pictures/Kofi-pic.JPG"
-                    alt="Kofi Amoah" style="width:250px;height:250px;"><br><br>
-                    <b>Kofi Amoah</b><br>
-                    Task description
+                <td>
+                    <img src="./Pictures/Kofi-pic.JPG" alt="Kofi Amoah">
+                    <br>
+                    <p>
+                        <b>Kofi Amoah</b><br>
+                        Bio
+                    </p>
                 </td>
 
-                <td><img src=""
-                    alt="Pablo Castaneda" style="width:250px;height:250px;"><br><br>
-                    <b>Pablo Castaneda</b><br>
-                    Task description
+                <td>
+                    <img src="" alt="Pablo Castaneda">
+                    <br>
+                    <p>
+                        <b>Pablo Castaneda</b><br>
+                        Bio
+                    </p>
+                    
                 </td>
 
-                <td><img src="./Pictures/Xavier.jpg"
-                    alt="Xavier Jordan" style="width:250px;height:250px;"><br><br>
-                    <b>Xavier Jordan</b><br>
-                    Task description
+                <td>
+                    <img src="./Pictures/Xavier.jpg" alt="Xavier Jordan">
+                    <br>
+                    <p>
+                        <b>Xavier Jordan</b><br>
+                        Bio
+                    </p>
                 </td>
             </tr>
         </table>
