--- a/about-us.html
+++ b/about-us.html
@@ -60,7 +60,9 @@
                     <br>
                     <p>
                         <b>Pablo Castaneda</b><br>
-                        Bio
+                        Pablo Castaneda is senior at Old Dominion University majoring in Computer Science.
+                        He currently works as a tutor for the Computer Science Tutoring Center and is in the Navy reserves.
+                        He has experience with Java, C++, Python, and is currently learning about the Django REST framework.
                     </p>
                     
                 </td>
