Link Process Flow Picture

--- a/process-flow.html
+++ b/process-flow.html
@@ -10,7 +10,7 @@
 
     <p>Our current working process flow:</p>
 
-    <img src=""alt="Process Flow">
+    <img src="./Pictures/Design flow.png"alt="Process Flow">
 
     <p>Where the problem occurs</p>
 
