added link for the process flow

--- a/process-flow.html
+++ b/process-flow.html
@@ -10,7 +10,7 @@
 
     <p>Our current working process flow:</p>
 
-    <img src="./Pictures/Design flow.png"alt="Process Flow">
+    <img src="https://lucid.app/lucidchart/6333dd95-d9ce-46b6-b01d-bfaa0da5fee6/edit?page=0&v=518&s=612"alt="Process Flow">
 
     <p>Where the problem occurs</p>
 
