--- a/presentations.html
+++ b/presentations.html
@@ -9,10 +9,8 @@
         <h1>Presentations</h1>
 
         <h2>Feasibility Presentation version 1</h2>
-        <a href="https://docs.google.com/presentation/d/1Q_meUGQhqN-ExY4bNeU4xWYKl47Rr5M7/edit?usp=sharing&ouid=113522663567712417604&rtpof=true&sd=true">
-            Link to Feasibility Presentation version 1
-        </a>
-        
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQqKbJ3YKVK0jWJxhd3rxHNeUKxcu9oGETv4zwsfyoq3nlnwzoxjZbwZvBlQj3W3Q/embed?start=false&loop=false&delayms=3000" 
+                frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> 
         
     </body>
 
