--- a/about-us.html
+++ b/about-us.html
@@ -72,7 +72,8 @@
                     <br>
                     <p>
                         <b>Xavier Jordan</b><br>
-                        Bio
+                        Xavier Jordan is a senior at Old Dominion University currently working on his Bachelor's Degree in Computer Science.
+			He has experience with Java, C++, and is currently learning Python. His interests are music, video games, and Harry Potter.
                     </p>
                 </td>
             </tr>
