--- a/about-us.html
+++ b/about-us.html
@@ -20,7 +20,8 @@
                     <br>
                     <p>
                         <b>Ashley Carter</b><br>
-                        Bio
+                        Ashley Carter is a senior at Old Dominion University majoring in Computer Science. 
+                        She has experience working with C++ and Java. Her hobbies are reading and building keyboards.
                     </p>
                 </td>
 
