updated picture link

--- a/about-us.html
+++ b/about-us.html
@@ -16,7 +16,7 @@
         <table>
             <tr>
                 <td>
-                    <img src="./Pictures/ashleypic.JPG"alt="Ashley Carter">
+                    <img src="./Pictures/ashleypic.jpg"alt="Ashley Carter">
                     <br>
                     <p>
                         <b>Ashley Carter</b><br>
