--- a/about-us.html
+++ b/about-us.html
@@ -53,7 +53,7 @@
                     <p>
                         <b>Kofi Amoah</b><br>
                         Kofi Amoah is a senior at Old Dominion University majoring in Computer Science.
-			He works on campus as a Help Desk Technician working at the university's ITS Help Desk.
+			He is a Help Desk Technician working at the university's ITS Help Desk.
 			He has experience with C++ and Java and currently learning about Javascript and AWS.
 			His hobbies are travelling, watching sports, reading and spending time with family.
 			
