--- a/about-us.html
+++ b/about-us.html
@@ -61,7 +61,7 @@
                 </td>
 
                 <td>
-                    <img src="" alt="Pablo Castaneda">
+                    <img src="./Pictures/bio picture 2.jpg" alt="Pablo Castaneda">
                     <br>
                     <p>
                         <b>Pablo Castaneda</b><br>
