added process flow description

--- a/process-flow.html
+++ b/process-flow.html
@@ -1,18 +1,24 @@
 <html>
     <style>
         html * {font-family: Arial, Helvetica, sans-serif;}
-        img {width:300px; height:300px; object-fit: cover;}
+        img {width:350px; height:350px; object-fit: cover;}
     </style>
 
     <title>CS 410 Gold Group: Process Flow</title>
+    
+    <body>
+        <h1>Process Flows</h1>
 
-    <h1>Process Flow v1</h1>
+        <h2>Process Flow v1</h2>
+        <p>Our current working process flow:</p>
 
-    <p>Our current working process flow:</p>
+        <img src="./Pictures/Design flow.png"alt="Process Flow">
 
-    <img src="./Pictures/Design flow.png"alt="Process Flow">
-
-    <p>Where the problem occurs</p>
+        <p>The problem people have with scheduling and time management falls around the prioritizing
+            event. They have their tasks and events listed but have difficulty scheduling them. Our
+            program would automate this process, helping the user plan out their tasks.
+        </p>
+    </body>    
 
     <footer>
         <br><br>
