added header navigation

--- a/presentations.html
+++ b/presentations.html
@@ -6,6 +6,17 @@
     <title>CS 410 Gold Group: Presentations</title>
 
     <body>
+        <header>
+            <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a>     |
+            <a href="./about-us.html">About Us</a>    |   
+            <a href="./problem.html">Societal Problem</a>    |   
+            <a href="./process-flow.html">Process Flows</a>    |   
+            <a href="./presentations.html">Presentations</a>    |   
+            <a href="./references.html">References</a>
+        </header>
+
+        <br>
+
         <h1>Presentations</h1>
 
         <h2>Feasibility Presentation version 1</h2>
