--- a/process-flow.html
+++ b/process-flow.html
@@ -7,9 +7,21 @@
     <title>CS 410 Gold Group: Process Flow</title>
     
     <body>
+        <header>
+            <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a>     |
+            <a href="./about-us.html">About Us</a>    |   
+            <a href="./problem.html">Societal Problem</a>    |   
+            <a href="./process-flow.html">Process Flows</a>    |   
+            <a href="./presentations.html">Presentations</a>    |   
+            <a href="./references.html">References</a>
+        </header>
+
+        <br>
+
+
         <h1>Process Flows</h1>
 
-        <h2>Process Flow v1</h2>
+        <h2>Solution Process Flow v1</h2>
         <p>Our current working process flow:</p>
 
         <img src="./Pictures/Design flow.png"alt="Process Flow">
