--- a/references.html
+++ b/references.html
@@ -7,6 +7,17 @@
     <title>CS 410 Gold Group: References</title>
 
     <body>
+        <header>
+            <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a>     |
+            <a href="./about-us.html">About Us</a>    |   
+            <a href="./problem.html">Societal Problem</a>    |   
+            <a href="./process-flow.html">Process Flows</a>    |   
+            <a href="./presentations.html">Presentations</a>    |   
+            <a href="./references.html">References</a>
+        </header>
+
+        <br>
+
         <h1>References</h1>
 
         <p class ="apa-reference">Indeed Editorial Team. (2021, February 22).
