--- a/about-us.html
+++ b/about-us.html
@@ -1,30 +1,43 @@
 <html>
-    <style>
-        html * {font-family: Arial, Helvetica, sans-serif;}
-        table {border-collapse: separate; border-spacing: 5px ; width: 90%;}
-        td {text-align: center;}
-        img {width:250px; height:250px; object-fit: cover;}
-    </style>
+    <head>
+        <title>CS 410 Gold Group: About Us</title>
 
-    <title>CS 410 Gold: About Us</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <style>
+            html * {font-family: Arial, Helvetica, sans-serif;}
+            td {text-align: center;}
+            img {width:250px; height:250px; object-fit: cover;}
+            body, html {
+                margin-top:10px;
+                margin-left:25px;
+                margin-right:25px
+            }
+        </style>
+    </head>    
+    
 
     <body>
         <header>
-            <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a>     |
-            <a href="./about-us.html">About Us</a>    |   
-            <a href="./problem.html">Societal Problem</a>    |   
-            <a href="./process-flow.html">Process Flows</a>    |   
-            <a href="./presentations.html">Presentations</a>    |   
-            <a href="./references.html">References</a>
+            <table style="border:0px; width: 100%">
+                <tr>
+                    <th style="text-align:center"><a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a></th>
+                    <th style="text-align:center"><a href="./about-us.html">About Us</a></th>
+                    <th style="text-align:center"><a href="./problem.html">Societal Problem</a></th>
+                    <th style="text-align:center"><a href="./process-flow.html">Process Flows</a> </th>
+                    <th style="text-align:center"><a href="./presentations.html">Presentations</a></th>
+                    <th style="text-align:center"><a href="./references.html">References</a></th>
+                </tr>
+            </table>
+            <hr>
         </header>
-
-        <br>
 
         <h1>Meet the Team</h1>
 
         <p>Hello! We are Group Gold, the team behind Schedule Puzzle!</p>
 
-        <table>
+        <table style="border-collapse: separate; border-spacing: 5px; width: 100%;">
             <tr>
                 <td>
                     <img src="./Pictures/ashleypic.jpg"alt="Ashley Carter">
@@ -64,10 +77,9 @@
                     <p>
                         <b>Kofi Amoah</b><br>
                         Kofi Amoah is a senior at Old Dominion University majoring in Computer Science.
-			He is a Help Desk Technician working at the university's ITS Help Desk.
-			He has experience with C++ and Java and currently learning about Javascript and AWS.
-			His hobbies are travelling, watching sports, reading and spending time with family.
-			
+                        He is a Help Desk Technician working at the university's ITS Help Desk.
+                        He has experience with C++ and Java and currently learning about Javascript and AWS.
+                        His hobbies are travelling, watching sports, reading and spending time with family.
                     </p>
                 </td>
 
@@ -80,7 +92,6 @@
                         He currently works as a tutor for the Computer Science Tutoring Center and is in the Navy reserves.
                         He has experience with Java, C++, Python, and is currently learning about the Django REST framework.
                     </p>
-                    
                 </td>
 
                 <td>
@@ -88,17 +99,17 @@
                     <br>
                     <p>
                         <b>Xavier Jordan</b><br>
-                        Xavier Jordan is a senior at Old Dominion University currently working on his Bachelor's Degree in Computer Science.
-			He has experience with Java, C++, and is currently learning Python. His interests are music, video games, and Harry Potter.
+                        Xavier Jordan is a senior at Old Dominion University currently working on his Bachelor's Degree in
+                        Computer Science. He has experience with Java, C++, and is currently learning Python. His interests
+                        are music, video games, and Harry Potter.
                     </p>
                 </td>
             </tr>
         </table>
+    </body>  
 
-        <footer>
-            <br><br>
-            <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/">Return to homepage</a>
-        </footer>
-
-    </body>
+    <footer>
+        <br><br>
+        <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/">Return to homepage</a>
+    </footer>
 </html>
