--- a/presentations.html
+++ b/presentations.html
@@ -1,28 +1,43 @@
 <html>
-    <style>
-        html * {font-family: Arial, Helvetica, sans-serif;}
-    </style>
+    <head>
+        <title>CS 410 Gold Group: Presentations</title>
 
-    <title>CS 410 Gold Group: Presentations</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <style>
+            html * {font-family: Arial, Helvetica, sans-serif;}
+
+            body, html {
+                margin-top:10px;
+                margin-left:25px;
+                margin-right:25px
+            }
+        </style>
+    </head>    
+    
 
     <body>
         <header>
-            <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a>     |
-            <a href="./about-us.html">About Us</a>    |   
-            <a href="./problem.html">Societal Problem</a>    |   
-            <a href="./process-flow.html">Process Flows</a>    |   
-            <a href="./presentations.html">Presentations</a>    |   
-            <a href="./references.html">References</a>
+            <table style="border:0px; width: 100%">
+                <tr>
+                    <th style="text-align:center"><a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a></th>
+                    <th style="text-align:center"><a href="./about-us.html">About Us</a></th>
+                    <th style="text-align:center"><a href="./problem.html">Societal Problem</a></th>
+                    <th style="text-align:center"><a href="./process-flow.html">Process Flows</a> </th>
+                    <th style="text-align:center"><a href="./presentations.html">Presentations</a></th>
+                    <th style="text-align:center"><a href="./references.html">References</a></th>
+                </tr>
+            </table>
+            <hr>
         </header>
-
-        <br>
 
         <h1>Presentations</h1>
 
         <h2>Feasibility Presentation version 1</h2>
         <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQqKbJ3YKVK0jWJxhd3rxHNeUKxcu9oGETv4zwsfyoq3nlnwzoxjZbwZvBlQj3W3Q/embed?start=false&loop=false&delayms=3000" 
-                frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> 
-        
+                frameborder="0" width="960" height="569"
+                allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> 
     </body>
 
     <footer>
