--- a/process-flow.html
+++ b/process-flow.html
@@ -1,23 +1,36 @@
 <html>
-    <style>
-        html * {font-family: Arial, Helvetica, sans-serif;}
-        img {width:350px; height:350px; object-fit: cover;}
-    </style>
+    <head>
+        <title>CS 410 Gold Group: Process Flows</title>
 
-    <title>CS 410 Gold Group: Process Flow</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <style>
+            html * {font-family: Arial, Helvetica, sans-serif;}
+            img {width:350px; height:350px; object-fit: cover;}
+            body, html {
+                margin-top:10px;
+                margin-left:25px;
+                margin-right:25px
+            }
+        </style>
+    </head>    
     
+
     <body>
         <header>
-            <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a>     |
-            <a href="./about-us.html">About Us</a>    |   
-            <a href="./problem.html">Societal Problem</a>    |   
-            <a href="./process-flow.html">Process Flows</a>    |   
-            <a href="./presentations.html">Presentations</a>    |   
-            <a href="./references.html">References</a>
+            <table style="border:0px; width: 100%">
+                <tr>
+                    <th style="text-align:center"><a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a></th>
+                    <th style="text-align:center"><a href="./about-us.html">About Us</a></th>
+                    <th style="text-align:center"><a href="./problem.html">Societal Problem</a></th>
+                    <th style="text-align:center"><a href="./process-flow.html">Process Flows</a> </th>
+                    <th style="text-align:center"><a href="./presentations.html">Presentations</a></th>
+                    <th style="text-align:center"><a href="./references.html">References</a></th>
+                </tr>
+            </table>
+            <hr>
         </header>
-
-        <br>
-
 
         <h1>Process Flows</h1>
 
@@ -26,7 +39,8 @@
 
         <img src="./Pictures/Copy of Process Flow v2.png"alt="Process Flow">
 
-        <p>The problem people have with scheduling and time management falls around the prioritizing
+        <p>
+            The problem people have with scheduling and time management falls around the prioritizing
             event. They have their tasks and events listed but have difficulty scheduling them. Our
             program would automate this process, helping the user plan out their tasks.
         </p>
