--- a/references.html
+++ b/references.html
@@ -1,22 +1,36 @@
 <html>
-    <style>
-        html * {font-family: Arial, Helvetica, sans-serif;}
-        .apa-reference {padding-left: 36px; text-indent: -36px;}
-    </style>
+    <head>
+        <title>CS 410 Gold Group: References</title>
 
-    <title>CS 410 Gold Group: References</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <style>
+            html * {font-family: Arial, Helvetica, sans-serif;}
+            .apa-reference {padding-left: 36px; text-indent: -36px;}
+            body, html {
+                margin-top:10px;
+                margin-left:25px;
+                margin-right:25px
+            }
+        </style>
+    </head>    
+    
 
     <body>
         <header>
-            <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a>     |
-            <a href="./about-us.html">About Us</a>    |   
-            <a href="./problem.html">Societal Problem</a>    |   
-            <a href="./process-flow.html">Process Flows</a>    |   
-            <a href="./presentations.html">Presentations</a>    |   
-            <a href="./references.html">References</a>
+            <table style="border:0px; width: 100%">
+                <tr>
+                    <th style="text-align:center"><a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a></th>
+                    <th style="text-align:center"><a href="./about-us.html">About Us</a></th>
+                    <th style="text-align:center"><a href="./problem.html">Societal Problem</a></th>
+                    <th style="text-align:center"><a href="./process-flow.html">Process Flows</a> </th>
+                    <th style="text-align:center"><a href="./presentations.html">Presentations</a></th>
+                    <th style="text-align:center"><a href="./references.html">References</a></th>
+                </tr>
+            </table>
+            <hr>
         </header>
-
-        <br>
 
         <h1>References</h1>
 
@@ -37,7 +51,6 @@
             <a href="https://www.acuitytraining.co.uk/news-tips/time-management-statistics-2022-research/">
                 https://www.acuitytraining.co.uk/news-tips/time-management-statistics-2022-research/</a>
         </p>
-        
     </body>
 
     <footer>
