--- a/about-us.html
+++ b/about-us.html
@@ -7,7 +7,8 @@
 
         <style>
             html * {font-family: Arial, Helvetica, sans-serif;}
-            td {text-align: center;}
+            table {border-collapse: separate; border-spacing: 5px; width: 100%;}
+            td {text-align: center; vertical-align: top}
             img {width:250px; height:250px; object-fit: cover;}
             body, html {
                 margin-top:10px;
@@ -37,7 +38,7 @@
 
         <p>Hello! We are Group Gold, the team behind Schedule Puzzle!</p>
 
-        <table style="border-collapse: separate; border-spacing: 5px; width: 100%;">
+        <table>
             <tr>
                 <td>
                     <img src="./Pictures/ashleypic.jpg"alt="Ashley Carter">
