added and updated current and solution process flows

--- a/process-flow.html
+++ b/process-flow.html
@@ -7,7 +7,7 @@
 
         <style>
             html * {font-family: Arial, Helvetica, sans-serif;}
-            img {width:350px; height:350px; object-fit: cover;}
+            img {width:1250px; object-fit: cover;}
             body, html {
                 margin-top:10px;
                 margin-left:25px;
@@ -34,16 +34,18 @@
 
         <h1>Process Flows</h1>
 
-        <h2>Solution Process Flow v1</h2>
-        <p>Our current working process flow:</p>
+        <h2>Current Process Flow</h2>
+        <p>The current process flow when it comes to creating a schedule is as follows</p>
 
-        <img src="./Pictures/Copy of Process Flow v2.png"alt="Process Flow">
+        <img src="./Pictures/Current-Process-Flow.png"alt="Current Process Flow">
 
-        <p>
-            The problem people have with scheduling and time management falls around the prioritizing
-            event. They have their tasks and events listed but have difficulty scheduling them. Our
-            program would automate this process, helping the user plan out their tasks.
-        </p>
+        <br>
+
+        <h2>Solution Process Flow</h2>
+        <p>The following is our solution process flow:</p>
+
+        <img src="./Pictures/Solution-Process-Flow.png"alt="Solution Process Flow">
+
     </body>    
 
     <footer>
