--- a/presentations.html
+++ b/presentations.html
@@ -6,27 +6,26 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <style>
-            html * {font-family: Arial, Helvetica, sans-serif;}
-
-            body, html {
-                margin-top:10px;
-                margin-left:25px;
-                margin-right:25px
-            }
+            * {font-family: Arial, Helvetica, sans-serif;}
+            a {text-decoration: none;}
+            body {margin-top: 10px; margin-left: 25px; margin-right: 25px; margin-bottom: 10px;}
+            img {width: 250px; height: 250px; object-fit: cover;}
+            table {border: 0px; border-collapse: separate; border-spacing: 5px; width: 100%;}
+            th {text-align: center;}
         </style>
     </head>    
     
 
     <body>
         <header>
-            <table style="border:0px; width: 100%">
+            <table>
                 <tr>
-                    <th style="text-align:center"><a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a></th>
-                    <th style="text-align:center"><a href="./about-us.html">About Us</a></th>
-                    <th style="text-align:center"><a href="./problem.html">Societal Problem</a></th>
-                    <th style="text-align:center"><a href="./process-flow.html">Process Flows</a> </th>
-                    <th style="text-align:center"><a href="./presentations.html">Presentations</a></th>
-                    <th style="text-align:center"><a href="./references.html">References</a></th>
+                    <th><a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a></th>
+                    <th><a href="./about-us.html">About Us</a></th>
+                    <th><a href="./problem.html">Societal Problem</a></th>
+                    <th><a href="./process-flow.html">Process Flows</a> </th>
+                    <th><a href="./presentations.html">Presentations</a></th>
+                    <th><a href="./references.html">References</a></th>
                 </tr>
             </table>
             <hr>
@@ -41,7 +40,7 @@
     </body>
 
     <footer>
-        <br><br>
-        <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/">Return to homepage</a>
+        <br><br><hr>
+        <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Return to homepage</b></a>
     </footer>
 </html>
