--- a/presentations.html
+++ b/presentations.html
@@ -36,7 +36,18 @@
         <h2>Feasibility Presentation version 1</h2>
         <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQqKbJ3YKVK0jWJxhd3rxHNeUKxcu9oGETv4zwsfyoq3nlnwzoxjZbwZvBlQj3W3Q/embed?start=false&loop=false&delayms=3000" 
                 frameborder="0" width="960" height="569"
-                allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> 
+                allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> <br>
+
+        <h2>Feasibility Presentation version 2</h2>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSRoFUP8YpmujMx9K1OZegKx5olTbj9f0P1opsisDT613v4GMi2sld6GuNR2AcbbzNnmBUOj_OYrQjf/embed?start=false&loop=false&delayms=3000"
+                frameborder="0" width="960" height="569"
+                allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> <br>
+        
+        <h2>Design Presentation</h2>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQwXKvkuTLPbag8cp5zl-YbV-nQBvIF9IlfxDG3hpzp68jsJ1tAYA3Gc3u4RmsumwcQv2BBDWY3L22f/embed?start=false&loop=false&delayms=3000"
+                frameborder="0" width="960" height="569"
+                allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> <br>
+        
     </body>
 
     <footer>
