--- a/presentations.html
+++ b/presentations.html
@@ -23,7 +23,7 @@
                     <th><a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a></th>
                     <th><a href="./about-us.html">About Us</a></th>
                     <th><a href="./problem.html">Societal Problem</a></th>
-                    <th><a href="./process-flow.html">Process Flows</a> </th>
+                    <th><a href="./deliverables.html">Deliverables</a></th>
                     <th><a href="./presentations.html">Presentations</a></th>
                     <th><a href="./references.html">References</a></th>
                 </tr>
