--- a/about-us.html
+++ b/about-us.html
@@ -3,16 +3,10 @@
         <title>CS 410 Gold Group: About Us</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="schedule.css">
 
         <style>
-            * {font-family: Arial, Helvetica, sans-serif;}
-            a {text-decoration: none;}
-            body {margin-top: 10px; margin-left: 25px; margin-right: 25px; margin-bottom: 10px;}
-            img {width: 250px; height: 250px; object-fit: cover;}
-            table {border: 0px; border-collapse: separate; border-spacing: 5px; width: 100%;}
-            td {text-align: center; vertical-align: top}
-            th {text-align: center;}
+            img {width: 250px; height: 250px;}
         </style>
     </head>    
     
