--- a/problem.html
+++ b/problem.html
@@ -3,15 +3,7 @@
         <title>CS 410 Gold Group: Problem</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-        <style>
-            * {font-family: Arial, Helvetica, sans-serif;}
-            a {text-decoration: none;}
-            body {margin-top: 10px; margin-left: 25px; margin-right: 25px; margin-bottom: 10px;}
-            table {border: 0px; border-collapse: separate; border-spacing: 5px; width: 100%;}
-            th {text-align: center;}
-        </style>
+        <link rel="stylesheet" href="schedule.css">
     </head>    
     
 
