table formatting updates

--- a/about-us.html
+++ b/about-us.html
@@ -7,9 +7,10 @@
 
         <style>
             img {width: 250px; height: 250px;}
+            td {width: 30%;}
         </style>
-    </head>    
-    
+    </head>  
+
 
     <body>
         <header>
@@ -42,7 +43,8 @@
                     </p>
                 </td>
 
-                <td><img src="./Pictures/jacindapicture.jpg" alt="Jacinda Rosario">
+                <td>
+                    <img src="./Pictures/jacindapicture.jpg" alt="Jacinda Rosario">
                     <br>
                     <p>
                         <b>Jacinda Rosario</b><br>
