formatting + to do items

--- a/deliverables.html
+++ b/deliverables.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="schedule.css">
 
         <style>
-            img {width: 1250px;}
+            img {width: 100%;}
+            td {width: 50%;}
         </style>
     </head>    
     
@@ -28,17 +29,33 @@
 
         <h1>Process Flows</h1>
 
-        <h2>Current Process Flow</h2>
-        <p>The current process flow when it comes to creating a schedule is as follows</p>
-
-        <img src="./Pictures/Current-Process-Flow.png"alt="Current Process Flow">
+        <table>
+            <tr>
+                <td><h2>Current Process Flow</h2></td>
+                <td><h2>Solution Process Flow</h2></td>
+            </tr>
+            <tr>
+                <td>
+                    <p>The current process flow when it comes to creating a schedule is as follows</p>
+                    <img src="./Pictures/Current-Process-Flow.png"alt="Current Process Flow">
+                </td>
+                <td>
+                    <p>The following is our solution process flow:</p>
+                     <img src="./Pictures/Solution-Process-Flow.png"alt="Solution Process Flow">
+                </td>
+            </tr>
+        </table>
 
         <br>
 
-        <h2>Solution Process Flow</h2>
-        <p>The following is our solution process flow:</p>
+        <b>UNDER CONSTRUCTION</b>
 
-        <img src="./Pictures/Solution-Process-Flow.png"alt="Solution Process Flow">
+        <h1>Major Functional Component Diagram</h1>
+
+        <h1>Competition Matrices</h1>
+
+        <h1>Risk Matrices</h1>
+        
 
     </body>    
 
