adding some color

--- a/references.html
+++ b/references.html
@@ -9,17 +9,14 @@
 
     <body>
         <header>
-            <table>
-                <tr>
-                    <th><a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a></th>
-                    <th><a href="./about-us.html">About Us</a></th>
-                    <th><a href="./problem.html">Societal Problem</a></th>
-                    <th><a href="./deliverables.html">Deliverables</a></th>
-                    <th><a href="./presentations.html">Presentations</a></th>
-                    <th><a href="./references.html">References</a></th>
-                </tr>
-            </table>
-            <hr>
+            <div class="navbar">
+                <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Home</b></a>
+                <a href="./about-us.html">About Us</a>
+                <a href="./problem.html">Societal Problem</a>
+                <a href="./deliverables.html">Deliverables</a>
+                <a href="./presentations.html">Presentations</a>
+                <a href="./references.html">References</a>
+            </div>
         </header>
 
         <h1>References</h1>
