moved footer into body

--- a/deliverables.html
+++ b/deliverables.html
@@ -24,7 +24,8 @@
             </div>
         </header>
 
-        <h1>Process Flows</h1>
+        <div class="content">
+            <h1>Process Flows</h1>
 
         <table>
             <tr>
@@ -52,12 +53,11 @@
         <h1>Competition Matrices</h1>
 
         <h1>Risk Matrices</h1>
-        
+        </div>
 
+        <footer>
+            <br><br><hr>
+            <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Return to homepage</b></a>
+        </footer>
     </body>    
-
-    <footer>
-        <br><br><hr>
-        <a href="https://kaypineda.github.io/2023-Spring-CS410-Gold/"><b>Return to homepage</b></a>
-    </footer>
 </html>
