added labs to header

--- a/deliverables.html
+++ b/deliverables.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="schedule.css">
 
         <style>
-            img {width: 100%; height:90%}
+            img {width: 100%;}
             td {width: 50%;}
         </style>
     </head>    
@@ -20,6 +20,7 @@
                 <a href="./problem.html">Societal Problem</a>
                 <a href="./deliverables.html">Deliverables</a>
                 <a href="./presentations.html">Presentations</a>
+                <a href="./labs.html">Labs</a>
                 <a href="./references.html">References</a>
             </div>
         </header>
