--- a/presentations.html
+++ b/presentations.html
@@ -15,6 +15,7 @@
                 <a href="./problem.html">Societal Problem</a>
                 <a href="./deliverables.html">Deliverables</a>
                 <a href="./presentations.html">Presentations</a>
+                <a href="./labs.html">Labs</a>
                 <a href="./references.html">References</a>
             </div>
         </header>
