--- a/deliverables.html
+++ b/deliverables.html
@@ -172,6 +172,30 @@
                 </td>
             </tr>
         </table>
+
+        <h1>Mock Ups</h1>
+        <table>
+            <tr>
+                <td>
+                    <h2>Login Page</h2>
+                    <img src="./Pictures/Mockups/Login.png" alt="Login Page">
+                </td>
+                <td>
+                    <h2>Dashboard</h2>
+                    <img src="./Pictures/Mockups/Dashboard.png" alt="Dashboard">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h2>Workspace</h2>
+                    <img src="./Pictures/Mockups/Workspace.png" alt="Workspace">
+                </td>
+                <td>
+                    <h2>Add Task</h2>
+                    <img src="./Pictures/Mockups/Add-Task.png" alt="Add Task">
+                </td>
+            </tr>
+        </table>
         
 
         <footer>
