bc I changed the file paths

--- a/about-us.html
+++ b/about-us.html
@@ -32,7 +32,7 @@
         <table>
             <tr>
                 <td>
-                    <img src="./Pictures/ashleypic.jpg"alt="Ashley Carter">
+                    <img src="./Pictures/Bio/ashleypic.jpg"alt="Ashley Carter">
                     <br>
                     <p>
                         <b>Ashley Carter</b><br>
@@ -42,7 +42,7 @@
                 </td>
 
                 <td>
-                    <img src="./Pictures/jacindapicture.jpg" alt="Jacinda Rosario">
+                    <img src="./Pictures/Bio/jacindapicture.jpg" alt="Jacinda Rosario">
                     <br>
                     <p>
                         <b>Jacinda Rosario</b><br>
@@ -53,7 +53,7 @@
                 </td>
 
                 <td>
-                    <img src="./Pictures/kayla-pineda-profile.jpg" alt="Kayla Pineda"><br>
+                    <img src="./Pictures/Bio/kayla-pineda-profile.jpg" alt="Kayla Pineda"><br>
                     <p>
                         <b>Kayla Pineda</b><br>
                         Kayla Pineda is a junior at Old Dominion University majoring in Computer Science.
@@ -64,7 +64,7 @@
             </tr>
             <tr>
                 <td>
-                    <img src="./Pictures/Kofi-pic.JPG" alt="Kofi Amoah">
+                    <img src="./Pictures/Bio/Kofi-pic.JPG" alt="Kofi Amoah">
                     <br>
                     <p>
                         <b>Kofi Amoah</b><br>
@@ -76,7 +76,7 @@
                 </td>
 
                 <td>
-                    <img src="./Pictures/bio picture 2.jpg" alt="Pablo Castaneda">
+                    <img src="./Pictures/Bio/bio picture 2.jpg" alt="Pablo Castaneda">
                     <br>
                     <p>
                         <b>Pablo Castaneda</b><br>
@@ -87,7 +87,7 @@
                 </td>
 
                 <td>
-                    <img src="./Pictures/Xavier.jpg" alt="Xavier Jordan">
+                    <img src="./Pictures/Bio/Xavier.jpg" alt="Xavier Jordan">
                     <br>
                     <p>
                         <b>Xavier Jordan</b><br>
