--- a/deliverables.html
+++ b/deliverables.html
@@ -31,13 +31,11 @@
             <tr>
                 <td>
                     <h2>Current Process Flow</h2>
-                    <p>The current process flow when it comes to creating a schedule is as follows</p>
-                    <img src="./Pictures/Current-Process-Flow.png"alt="Current Process Flow">
+                    <img src="./Pictures/Process-Flows/Current.png"alt="Current Process Flow">
                 </td>
                 <td>
                     <h2>Solution Process Flow</h2>
-                    <p>The following is our solution process flow:</p>
-                    <img src="./Pictures/Solution-Process-Flow.png"alt="Solution Process Flow">
+                    <img src="./Pictures/Process-Flows/Solution.png"alt="Solution Process Flow">
                 </td>
             </tr>
         </table>
@@ -59,17 +57,17 @@
             <tr>
                 <td colspan="2">
                     <h2>Main Features</h2>
-                    <img style="width:50%;" src="./Pictures/Competition-Main.png"alt="Competition Matrix: Main Features">
+                    <img style="width:50%;" src="./Pictures/Competition/Main.png"alt="Competition Matrix: Main Features">
                 </td>
             </tr>
             <tr>
                 <td>
                     <h2>Basic Features</h2>
-                    <img src="./Pictures/Competition-Basic.png"alt="Competition Matrix: Basic Features">
+                    <img src="./Pictures/Competition/Basic.png"alt="Competition Matrix: Basic Features">
                 </td>
                 <td>
                     <h2>Prioritization Features</h2>
-                    <img src="./Pictures/Competition-Priority.png"alt="Competition Matrix: Prioritization Features">
+                    <img src="./Pictures/Competition/Priority.png"alt="Competition Matrix: Prioritization Features">
                 </td>
             </tr>
         </table>
@@ -101,7 +99,7 @@
                     </ul>
                 </td>
                 <td>
-                    <img src="./Pictures/Risk-Customer.png" alt="Risk Matrix: Customer">
+                    <img src="./Pictures/Risk/Customer.png" alt="Risk Matrix: Customer">
                 </td>
             </tr>
 
@@ -135,7 +133,7 @@
                     </ul>
                 </td>
                 <td>
-                    <img src="./Pictures/Risk-Technical.png" alt="Risk Matrix: Technical">
+                    <img src="./Pictures/Risk/Technical.png" alt="Risk Matrix: Technical">
                 </td>
             </tr>
             <tr>
@@ -168,7 +166,7 @@
                     </ul>
                 </td>
                 <td>
-                    <img src="./Pictures/Risk-Security.png" alt="Risk Matrix: Security">
+                    <img src="./Pictures/Risk/Security.png" alt="Risk Matrix: Security">
                 </td>
             </tr>
         </table>
